--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -74,7 +74,7 @@ services:
     container_name: discount.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - "DatabaseSettings:ConnectionString=Server=discountdb;Port=5432;Database=DiscountDb;User Id=Admin;Password=@Admin1234;"
+      - "DatabaseSettings:ConnectionString=Server=discountdb;Port=5432;Database=DiscountDb;User Id=admin;Password=@Admin1234;"
     depends_on:
       - discountdb
     ports:
