--- a/src/Services/Basket/Basket.API/appsettings.json
+++ b/src/Services/Basket/Basket.API/appsettings.json
@@ -2,6 +2,9 @@
   "CacheSettings": {
     "ConnectionString": "localhost:6379"
   },
+  "GrpcSettings": {
+    "DiscountUri": "http://localhost:5272"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
