--- a/src/Services/Basket/Basket.API/appsettings.json
+++ b/src/Services/Basket/Basket.API/appsettings.json
@@ -3,7 +3,7 @@
     "ConnectionString": "localhost:6379"
   },
   "GrpcSettings": {
-    "DiscountUri": "http://localhost:5272"
+    "DiscountUrl": "http://localhost:5272"
   },
   "Logging": {
     "LogLevel": {
