--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -11,10 +11,10 @@ services:
     image: postgres
 
   orderdb:
-    image: mcr.microsoft.com/mssql/server:2017-latest
+    image: mcr.microsoft.com/mssql/server:2019-latest
 
-  rabbimq:
-    image: rabbimq:3-management-alpine
+  #rabbimq:
+  #  image: rabbimq:3-management-alpine
     
   pgadmin:
     image: dpage/pgadmin4 
