--- a/src/Services/Basket/Basket.API/appsettings.json
+++ b/src/Services/Basket/Basket.API/appsettings.json
@@ -5,6 +5,9 @@
   "GrpcSettings": {
     "DiscountUrl": "http://localhost:5272"
   },
+  "EventBusSettings": {
+    "HostAddress": "amqp://guest:quest@localhost:5672"
+  }
   "Logging": {
     "LogLevel": {
       "Default": "Information",
