rabbitMq docker image pulled

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -13,8 +13,8 @@ services:
   orderdb:
     image: mcr.microsoft.com/mssql/server:2019-latest
 
-  #rabbimq:
-  #  image: rabbimq:3-management-alpine
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
     
   pgadmin:
     image: dpage/pgadmin4 
