--- a/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.json
@@ -7,6 +7,9 @@
     "FromAddress": "meloga41@gmail.com",
     "FromName": "Meloga"
   },
+  "EventBusSettings": {
+    "HostAddress": "amqp://guest:quest@localhost:5672"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
