--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -82,8 +82,10 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - "CacheSettings:ConnectionString=basketdb:6379"
       - "GrpcSettings:DiscountUrl=http://discount.grpc"
+      - "EventBusSettings:HostAddress=amqp://guest:quest@localhost:5672"
     depends_on:
       - basketdb
+      - rabbitmq
     ports:
       - "8001:80"
 
@@ -114,8 +116,10 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - "ConnectionStrings:OrderingConnectionString=Server=orderdb;Database=OrderDb;User Id=sa;Password=@Admin1234;TrustServerCertificate=Yes"
+      - "EventBusSettings:HostAddress=amqp://guest:quest@localhost:5672"
     depends_on:
       - orderdb
+      - rabbimq
     ports:
       - "8004:80"
 
